Upgrade version to Spring Cloud Azure 6.0 beta3